RESOLVED FIXED58095
[GTK] Fix the WebKit2 build for older versions of GTK+
https://bugs.webkit.org/show_bug.cgi?id=58095
Summary [GTK] Fix the WebKit2 build for older versions of GTK+
Martin Robinson
Reported 2011-04-07 15:56:43 PDT
WebKit2 uses gdk_window_create_similar_surface which is only availabe in GTK+ >= 2.22.
Attachments
Patch (3.71 KB, patch)
2011-04-08 11:35 PDT, Martin Robinson
xan.lopez: review+
Martin Robinson
Comment 1 2011-04-08 11:35:36 PDT
Xan Lopez
Comment 2 2011-04-08 11:38:11 PDT
Comment on attachment 88845 [details] Patch r=me
WebKit Review Bot
Comment 3 2011-04-08 11:39:00 PDT
Attachment 88845 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCor..." exit_code: 1 Source/WebCore/platform/gtk/GtkVersioning.h:50: The parameter name "window" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebCore/platform/gtk/GtkVersioning.h:50: The parameter name "content" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebCore/platform/gtk/GtkVersioning.h:50: gdk_window_create_similar_surface is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Total errors found: 3 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Martin Robinson
Comment 4 2011-04-08 11:48:09 PDT
WebKit Review Bot
Comment 5 2011-04-08 12:47:20 PDT
http://trac.webkit.org/changeset/83319 might have broken Qt Linux Release The following tests are not passing: http/tests/loading/preload-append-scan.php
Note You need to log in before you can comment on or make changes to this bug.